<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/liquid_screen"
android:weightSum="1">

    <!--Text: Header-->
    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquid"
        android:id="@+id/liquid"
        android:gravity="center_vertical|left"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginLeft="580dp" />
<!--Layout for Water -->
    <RelativeLayout
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginTop="-100dp"
    android:layout_marginLeft="-660dp"
    android:clickable="true"
    android:id="@+id/water_tag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquid_1"
        android:id="@+id/liquid_1"
        android:layout_marginTop="160dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor_price"
        android:id="@+id/floor_price"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

<!--Layout for Coconut Water -->
<RelativeLayout
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginLeft="90dp"
    android:layout_marginTop="-100dp"
    android:clickable="true"
    android:id="@+id/cocowater_tag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquid_2"
        android:id="@+id/liquid_2"
        android:layout_marginTop="160dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceiling_price"
        android:id="@+id/ceiling_price"
        android:layout_marginTop="205dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

<!--Layout for Almond Milk -->
<RelativeLayout
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginLeft="90dp"
    android:layout_marginTop="-100dp"
    android:clickable="true"
    android:id="@+id/almondmilk_tag">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquid_3"
        android:id="@+id/liquid_3"
        android:layout_marginTop="160dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ceiling_price"
        android:id="@+id/ceiling_price"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
    <!--Layout: Purchase Details-->
    <RelativeLayout
        android:layout_width="1200dp"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="-1150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_1"
            android:id="@+id/element_1"
            android:layout_alignParentStart="false"
            android:textStyle="bold"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_2"
            android:id="@+id/element_2"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_marginLeft="480dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_3"
            android:id="@+id/element_3"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_marginLeft="640dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_4"
            android:id="@+id/element_4"
            android:layout_alignParentEnd="false"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_marginLeft="980dp" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="65dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/element_1_val"
            android:id="@+id/element_1_val"
            android:layout_below="@+id/element_1"
            android:layout_marginLeft="300dp"
            android:gravity="center" />
        <TextView
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/element_2_val"
            android:id="@+id/element_2_val"
            android:layout_below="@+id/element_1"
            android:layout_alignEnd="@+id/element_1"
            android:layout_marginRight="-200dp"
            android:gravity="center" />
        <TextView
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/element_3_val"
            android:id="@+id/element_3_val"
            android:layout_below="@+id/element_1"
            android:layout_alignEnd="@+id/element_1"
            android:gravity="center"
            android:layout_marginRight="-380dp" />
        <TextView
            android:layout_width="135dp"
            android:layout_height="65dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/element_4_val"
            android:id="@+id/element_4_val"
            android:layout_below="@+id/element_1"
            android:layout_alignEnd="@+id/element_1"
            android:layout_marginRight="-700dp"
            android:gravity="center" />

    </RelativeLayout>

    <!--Button: Previous-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/previous_tag"
        android:layout_gravity="left|top"
        android:layout_marginLeft="-1200dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:clickable="true" />
    <!--Button: Refresh-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/refresh_id"
        android:layout_gravity="left|top"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:clickable="true" />
    <!--Button: Language-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/lingual"
        android:id="@+id/lingual_tag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="890dp"
        android:layout_gravity="right|top"
        android:background="#00ffffff"
        android:textSize="20sp"
        android:clickable="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:id="@+id/smoothie_tag"
        android:layout_marginLeft="-1150dp"
        android:background="@drawable/green_smoothie"
        android:layout_gravity="bottom" />
</LinearLayout>
