<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_screen"
    android:weightSum="1"
    android:orientation="horizontal">


<RelativeLayout
android:layout_width="match_parent"
android:layout_height="250dp"
android:layout_gravity="center_vertical"
android:layout_marginLeft="-10dp"
android:layout_marginTop="60dp">

<ImageView
    android:layout_width="100dp"
    android:layout_height="200dp"
    android:id="@+id/smoothie_tag"
    android:layout_marginLeft="80dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/green_smoothie"
    android:layout_gravity="bottom" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/element_1"
    android:id="@+id/element_1"
    android:layout_alignParentStart="false"
    android:textStyle="bold"
    android:layout_marginLeft="300dp"
    android:layout_marginTop="15dp"
    android:textSize="30sp"
    android:layout_marginBottom="10dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/element_2"
    android:id="@+id/element_2"
    android:textStyle="bold"
    android:layout_marginTop="15dp"
    android:textSize="30sp"
    android:layout_marginLeft="530dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/element_3"
    android:id="@+id/element_3"
    android:textStyle="bold"
    android:layout_marginTop="15dp"
    android:textSize="30sp"
    android:layout_marginLeft="715dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/element_4"
    android:id="@+id/element_4"
    android:layout_alignParentEnd="false"
    android:textStyle="bold"
    android:layout_marginTop="15dp"
    android:textSize="30sp"
    android:layout_marginLeft="1050dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/element_1_val"
        android:id="@+id/element_1_val"
        android:layout_below="@+id/element_1"
        android:layout_alignEnd="@+id/element_1"
        android:layout_marginRight="-30dp"
        android:layout_marginTop="50dp"
        android:gravity="center" />
    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/element_2_val"
        android:id="@+id/element_2_val"
        android:layout_below="@+id/element_1"
        android:layout_alignEnd="@+id/element_1"
        android:layout_marginRight="-250dp"
        android:layout_marginTop="50dp"
        android:gravity="center" />
    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/element_3_val"
        android:id="@+id/element_3_val"
        android:layout_below="@+id/element_1"
        android:layout_alignEnd="@+id/element_1"
        android:layout_marginRight="-480dp"
        android:layout_marginTop="50dp"
        android:gravity="center" />
    <TextView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/element_4_val"
        android:id="@+id/element_4_val"
        android:layout_below="@+id/element_1"
        android:layout_alignEnd="@+id/element_1"
        android:layout_marginTop="50dp"
        android:layout_marginRight="-770dp"
        android:gravity="center" />

</RelativeLayout>

    <TextView
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_instruction"
        android:id="@+id/payment_instruction"
        android:layout_gravity="top"
        android:textStyle="bold"
        android:layout_marginLeft="-880dp"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:gravity="center_horizontal" />

    <!--Button: Language-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:text="@string/lingual"
        android:id="@+id/lingual_tag"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="200dp"
        android:layout_gravity="right|top"
        android:background="#00ffffff"
        android:textSize="20sp"
        android:clickable="true" />

    <!--Button: Previous-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/previous_id"
        android:layout_gravity="left|top"
        android:layout_marginLeft="-1225dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:textSize="10sp"
        android:clickable="true" />
    <!--Button: Refresh-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/refresh_id"
        android:layout_gravity="left|top"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:background="#00ffffff"
        android:clickable="true" />

</LinearLayout>