<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recipe_screen"
    android:weightSum="1">

 <!--Layout for Green Machine -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:id="@+id/smoothie_g">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoothie_1"
            android:id="@+id/smoothie_1"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_price"
            android:id="@+id/const_price"
            android:layout_marginTop="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!--Text: Header-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoothie"
        android:id="@+id/textView"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:gravity="center_vertical|left"
        android:textSize="19sp" />

    <!--Layout for Tropical Paradise -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="290dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="-195dp"
        android:clickable="true"
        android:id="@+id/smoothie_t">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoothie_2"
            android:id="@+id/smoothie_2"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_price"
            android:id="@+id/const_price"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!--Layout for Berry Licious -->
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:background="#002d1962"
        android:clickable="true"
        android:id="@+id/smoothie_b">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoothie_3"
            android:id="@+id/smoothie_3"
            android:layout_marginTop="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/const_price"
            android:id="@+id/const_price"
            android:layout_marginTop="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <!--Button: Language-->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:text="@string/lingual"
        android:id="@+id/lingual_tag"
        android:layout_gravity="right|top"
        android:layout_marginLeft="-70dp"
        android:background="#00ffffff"
        android:textSize="10sp"
        android:clickable="true" />


</LinearLayout>


