<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="#e600ac"
    android:alpha="0.88">

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:alpha="0.8"
        android:background="@color/transparent"
        android:layout_marginTop="70dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:text="@string/ingredients_g"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="305dp"
        android:alpha="0.8"
        android:background="@color/transparent"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/ingredients_t"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="590dp"
        android:background="@color/transparent"
        android:alpha="0.8"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/ingredients_b"/>
    </RelativeLayout>

    <Button
        android:id="@+id/exit_tag"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="380dp"
        android:background="@drawable/buttonshape"
        android:alpha="0.8"
        android:text="Close" />
</RelativeLayout>